fix: resive cards when viewd on tablet

--- a/assets/src/js/admin/reports/components/card/style.scss
+++ b/assets/src/js/admin/reports/components/card/style.scss
@@ -20,3 +20,9 @@
 		flex-direction: column;
 	}
 }
+
+@media (max-width: 768px) {
+	.givewp-card {
+		grid-column: span 12 !important;
+	}
+}
